[package]
authors = ["PayChains Maintainers <maintainers@paychains.foundation>"]
edition = "2021"
name = "paychains-accounts-bench"
version = "1.10.0"
repository = "https://github.com/paychains-labs/paychains"
license = "Apache-2.0"
homepage = "https://paychains.com/"
publish = false

[dependencies]
log = "0.4.14"
rayon = "1.5.1"
paychains-logger = { path = "../logger", version = "=1.10.0" }
paychains-runtime = { path = "../runtime", version = "=1.10.0" }
paychains-measure = { path = "../measure", version = "=1.10.0" }
paychains-sdk = { path = "../sdk", version = "=1.10.0" }
paychains-version = { path = "../version", version = "=1.10.0" }
clap = "2.33.1"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
