[package]
authors = ["PayChains Maintainers <maintainers@paychains.foundation>"]
edition = "2021"
name = "paychains-accounts-cluster-bench"
version = "1.10.0"
repository = "https://github.com/paychains-labs/paychains"
license = "Apache-2.0"
homepage = "https://paychains.com/"
publish = false

[dependencies]
clap = "2.33.1"
log = "0.4.14"
rand = "0.7.0"
rayon = "1.5.1"
paychains-account-decoder = { path = "../account-decoder", version = "=1.10.0" }
paychains-clap-utils = { path = "../clap-utils", version = "=1.10.0" }
paychains-client = { path = "../client", version = "=1.10.0" }
paychains-faucet = { path = "../faucet", version = "=1.10.0" }
paychains-gossip = { path = "../gossip", version = "=1.10.0" }
paychains-logger = { path = "../logger", version = "=1.10.0" }
paychains-measure = { path = "../measure", version = "=1.10.0" }
paychains-net-utils = { path = "../net-utils", version = "=1.10.0" }
paychains-runtime = { path = "../runtime", version = "=1.10.0" }
paychains-sdk = { path = "../sdk", version = "=1.10.0" }
paychains-streamer = { path = "../streamer", version = "=1.10.0" }
paychains-transaction-status = { path = "../transaction-status", version = "=1.10.0" }
paychains-version = { path = "../version", version = "=1.10.0" }
spl-token = { version = "=3.2.0", features = ["no-entrypoint"] }

[dev-dependencies]
paychains-core = { path = "../core", version = "=1.10.0" }
paychains-local-cluster = { path = "../local-cluster", version = "=1.10.0" }
paychains-test-validator = { path = "../test-validator", version = "=1.10.0" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
