[package]
authors = ["PayChains Maintainers <maintainers@paychains.foundation>"]
edition = "2021"
name = "paychains-accountsdb-plugin-interface"
description = "The PayChains AccountsDb plugin interface."
version = "1.10.0"
repository = "https://github.com/paychains-labs/paychains"
license = "Apache-2.0"
homepage = "https://paychains.com/"
documentation = "https://docs.rs/paychains-accountsdb-plugin-interface"

[dependencies]
log = "0.4.11"
thiserror = "1.0.30"
paychains-sdk = { path = "../sdk", version = "=1.10.0" }
paychains-transaction-status = { path = "../transaction-status", version = "=1.10.0" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
