[package]
authors = ["PayChains Maintainers <maintainers@paychains.foundation>"]
edition = "2021"
name = "paychains-accountsdb-plugin-manager"
description = "The PayChains AccountsDb plugin manager."
version = "1.10.0"
repository = "https://github.com/paychains-labs/paychains"
license = "Apache-2.0"
homepage = "https://paychains.com/"
documentation = "https://docs.rs/paychains-validator"

[dependencies]
bs58 = "0.4.0"
crossbeam-channel = "0.5"
libloading = "0.7.2"
log = "0.4.11"
serde = "1.0.133"
serde_derive = "1.0.103"
serde_json = "1.0.74"
paychains-accountsdb-plugin-interface = { path = "../accountsdb-plugin-interface", version = "=1.10.0" }
paychains-measure = { path = "../measure", version = "=1.10.0" }
paychains-metrics = { path = "../metrics", version = "=1.10.0" }
paychains-rpc = { path = "../rpc", version = "=1.10.0" }
paychains-runtime = { path = "../runtime", version = "=1.10.0" }
paychains-sdk = { path = "../sdk", version = "=1.10.0" }
paychains-transaction-status = { path = "../transaction-status", version = "=1.10.0" }
thiserror = "1.0.30"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
