[package]
authors = ["PayChains Maintainers <maintainers@paychains.foundation>"]
edition = "2021"
name = "paychains-banking-bench"
version = "1.10.0"
repository = "https://github.com/paychains-labs/paychains"
license = "Apache-2.0"
homepage = "https://paychains.com/"
publish = false

[dependencies]
clap = "2.33.1"
crossbeam-channel = "0.5"
log = "0.4.14"
rand = "0.7.0"
rayon = "1.5.1"
paychains-core = { path = "../core", version = "=1.10.0" }
paychains-gossip = { path = "../gossip", version = "=1.10.0" }
paychains-ledger = { path = "../ledger", version = "=1.10.0" }
paychains-logger = { path = "../logger", version = "=1.10.0" }
paychains-measure = { path = "../measure", version = "=1.10.0" }
paychains-perf = { path = "../perf", version = "=1.10.0" }
paychains-poh = { path = "../poh", version = "=1.10.0" }
paychains-runtime = { path = "../runtime", version = "=1.10.0" }
paychains-streamer = { path = "../streamer", version = "=1.10.0" }
paychains-sdk = { path = "../sdk", version = "=1.10.0" }
paychains-version = { path = "../version", version = "=1.10.0" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
