[package]
name = "paychains-banks-client"
version = "1.10.0"
description = "PayChains banks client"
authors = ["PayChains Maintainers <maintainers@paychains.foundation>"]
repository = "https://github.com/paychains-labs/paychains"
license = "Apache-2.0"
homepage = "https://paychains.com/"
documentation = "https://docs.rs/paychains-banks-client"
edition = "2021"

[dependencies]
borsh = "0.9.1"
futures = "0.3"
paychains-banks-interface = { path = "../banks-interface", version = "=1.10.0" }
paychains-program = { path = "../sdk/program", version = "=1.10.0" }
paychains-sdk = { path = "../sdk", version = "=1.10.0" }
tarpc = { version = "0.27.2", features = ["full"] }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-serde = { version = "0.8", features = ["bincode"] }

[dev-dependencies]
paychains-runtime = { path = "../runtime", version = "=1.10.0" }
paychains-banks-server = { path = "../banks-server", version = "=1.10.0" }

[lib]
crate-type = ["lib"]
name = "paychains_banks_client"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
