[package]
name = "paychains-banks-interface"
version = "1.10.0"
description = "PayChains banks RPC interface"
authors = ["PayChains Maintainers <maintainers@paychains.foundation>"]
repository = "https://github.com/paychains-labs/paychains"
license = "Apache-2.0"
homepage = "https://paychains.com/"
documentation = "https://docs.rs/paychains-banks-interface"
edition = "2021"

[dependencies]
serde = { version = "1.0.133", features = ["derive"] }
paychains-sdk = { path = "../sdk", version = "=1.10.0" }
tarpc = { version = "0.27.2", features = ["full"] }

[lib]
crate-type = ["lib"]
name = "paychains_banks_interface"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
