[package]
authors = ["PayChains Maintainers <maintainers@paychains.foundation>"]
edition = "2021"
name = "paychains-bench-streamer"
version = "1.10.0"
repository = "https://github.com/paychains-labs/paychains"
license = "Apache-2.0"
homepage = "https://paychains.com/"
publish = false

[dependencies]
crossbeam-channel = "0.5"
clap = "2.33.1"
paychains-streamer = { path = "../streamer", version = "=1.10.0" }
paychains-net-utils = { path = "../net-utils", version = "=1.10.0" }
paychains-version = { path = "../version", version = "=1.10.0" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
