[package]
authors = ["PayChains Maintainers <maintainers@paychains.foundation>"]
edition = "2021"
name = "paychains-bench-tps"
version = "1.10.0"
repository = "https://github.com/paychains-labs/paychains"
license = "Apache-2.0"
homepage = "https://paychains.com/"
publish = false

[dependencies]
clap = "2.33.1"
crossbeam-channel = "0.5"
log = "0.4.14"
rayon = "1.5.1"
serde_json = "1.0.74"
serde_yaml = "0.8.23"
paychains-core = { path = "../core", version = "=1.10.0" }
paychains-genesis = { path = "../genesis", version = "=1.10.0" }
paychains-client = { path = "../client", version = "=1.10.0" }
paychains-faucet = { path = "../faucet", version = "=1.10.0" }
paychains-gossip = { path = "../gossip", version = "=1.10.0" }
paychains-logger = { path = "../logger", version = "=1.10.0" }
paychains-metrics = { path = "../metrics", version = "=1.10.0" }
paychains-measure = { path = "../measure", version = "=1.10.0" }
paychains-net-utils = { path = "../net-utils", version = "=1.10.0" }
paychains-runtime = { path = "../runtime", version = "=1.10.0" }
paychains-sdk = { path = "../sdk", version = "=1.10.0" }
paychains-streamer = { path = "../streamer", version = "=1.10.0" }
paychains-version = { path = "../version", version = "=1.10.0" }

[dev-dependencies]
serial_test = "0.5.1"
paychains-local-cluster = { path = "../local-cluster", version = "=1.10.0" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
