[package]
name = "paychains-bucket-map"
version = "1.10.0"
description = "paychains-bucket-map"
homepage = "https://paychains.com/"
documentation = "https://docs.rs/paychains-bucket-map"
readme = "../README.md"
repository = "https://github.com/paychains-labs/paychains"
authors = ["PayChains Maintainers <maintainers@paychains.foundation>"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
paychains-sdk = { path = "../sdk", version = "=1.10.0" }
memmap2 = "0.5.2"
log = { version = "0.4.11" }
paychains-measure = { path = "../measure", version = "=1.10.0" }
rand = "0.7.0"
tempfile = "3.3.0"
modular-bitfield = "0.11.2"

[dev-dependencies]
fs_extra = "1.2.0"
rayon = "1.5.0"
paychains-logger = { path = "../logger", version = "=1.10.0" }

[lib]
crate-type = ["lib"]
name = "paychains_bucket_map"

[[bench]]
name = "bucket_map"
