[package]
name = "paychains-clap-utils"
version = "1.10.0"
description = "PayChains utilities for the clap"
authors = ["PayChains Maintainers <maintainers@paychains.foundation>"]
repository = "https://github.com/paychains-labs/paychains"
license = "Apache-2.0"
homepage = "https://paychains.com/"
documentation = "https://docs.rs/paychains-clap-utils"
edition = "2021"

[dependencies]
clap = "2.33.0"
rpassword = "5.0"
paychains-perf = { path = "../perf", version = "=1.10.0" }
paychains-remote-wallet = { path = "../remote-wallet", version = "=1.10.0" }
paychains-sdk = { path = "../sdk", version = "=1.10.0" }
thiserror = "1.0.30"
tiny-bip39 = "0.8.2"
uriparse = "0.6.3"
url = "2.2.2"
chrono = "0.4"

[dev-dependencies]
tempfile = "3.3.0"

[lib]
name = "paychains_clap_utils"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
