[package]
authors = ["PayChains Maintainers <maintainers@paychains.foundation>"]
edition = "2021"
name = "paychains-cli-output"
description = "Blockchain, Rebuilt for Scale"
version = "1.10.0"
repository = "https://github.com/paychains-labs/paychains"
license = "Apache-2.0"
homepage = "https://paychains.com/"
documentation = "https://docs.rs/paychains-cli-output"

[dependencies]
base64 = "0.13.0"
chrono = { version = "0.4.11", features = ["serde"] }
clap = "2.33.0"
console = "0.15.0"
humantime = "2.0.1"
Inflector = "0.11.4"
indicatif = "0.16.2"
serde = "1.0.133"
serde_json = "1.0.74"
paychains-account-decoder = { path = "../account-decoder", version = "=1.10.0" }
paychains-clap-utils = { path = "../clap-utils", version = "=1.10.0" }
paychains-client = { path = "../client", version = "=1.10.0" }
paychains-sdk = { path = "../sdk", version = "=1.10.0" }
paychains-transaction-status = { path = "../transaction-status", version = "=1.10.0" }
paychains-vote-program = { path = "../programs/vote", version = "=1.10.0" }
spl-memo = { version = "=3.0.1", features = ["no-entrypoint"] }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
