[package]
authors = ["PayChains Maintainers <maintainers@paychains.foundation>"]
edition = "2021"
name = "paychains-cli"
description = "Blockchain, Rebuilt for Scale"
version = "1.10.0"
repository = "https://github.com/paychains-labs/paychains"
license = "Apache-2.0"
homepage = "https://paychains.com/"
documentation = "https://docs.rs/paychains-cli"

[dependencies]
bincode = "1.3.3"
bs58 = "0.4.0"
clap = "2.33.1"
criterion-stats = "0.3.0"
ctrlc = { version = "3.2.1", features = ["termination"] }
console = "0.15.0"
const_format = "0.2.22"
crossbeam-channel = "0.5"
log = "0.4.14"
humantime = "2.0.1"
num-traits = "0.2"
pretty-hex = "0.2.1"
reqwest = { version = "0.11.6", default-features = false, features = ["blocking", "rustls-tls", "json"] }
semver = "1.0.4"
serde = "1.0.133"
serde_derive = "1.0.103"
serde_json = "1.0.74"
paychains-account-decoder = { path = "../account-decoder", version = "=1.10.0" }
paychains-bpf-loader-program = { path = "../programs/bpf_loader", version = "=1.10.0" }
paychains-clap-utils = { path = "../clap-utils", version = "=1.10.0" }
paychains-cli-config = { path = "../cli-config", version = "=1.10.0" }
paychains-cli-output = { path = "../cli-output", version = "=1.10.0" }
paychains-client = { path = "../client", version = "=1.10.0" }
paychains-config-program = { path = "../programs/config", version = "=1.10.0" }
paychains-faucet = { path = "../faucet", version = "=1.10.0" }
paychains-logger = { path = "../logger", version = "=1.10.0" }
paychains-program-runtime = { path = "../program-runtime", version = "=1.10.0" }
paychains_rbpf = "=0.2.21"
paychains-remote-wallet = { path = "../remote-wallet", version = "=1.10.0" }
paychains-sdk = { path = "../sdk", version = "=1.10.0" }
paychains-transaction-status = { path = "../transaction-status", version = "=1.10.0" }
paychains-version = { path = "../version", version = "=1.10.0" }
paychains-vote-program = { path = "../programs/vote", version = "=1.10.0" }
spl-memo = { version = "=3.0.1", features = ["no-entrypoint"] }
thiserror = "1.0.30"
tiny-bip39 = "0.8.2"

[dev-dependencies]
paychains-streamer = { path = "../streamer", version = "=1.10.0" }
paychains-test-validator = { path = "../test-validator", version = "=1.10.0" }
tempfile = "3.3.0"

[[bin]]
name = "paychains"
path = "src/main.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
