[package]
name = "paychains-client-test"
version = "1.10.0"
description = "PayChains RPC Test"
authors = ["PayChains Maintainers <maintainers@paychains.foundation>"]
repository = "https://github.com/paychains-labs/paychains"
license = "Apache-2.0"
homepage = "https://paychains.com/"
documentation = "https://docs.rs/paychains-client-test"
edition = "2021"

[dependencies]
serde_json = "1.0.74"
serial_test = "0.5.1"
paychains-client = { path = "../client", version = "=1.10.0" }
paychains-ledger = { path = "../ledger", version = "=1.10.0" }
paychains-measure = { path = "../measure", version = "=1.10.0" }
paychains-merkle-tree = { path = "../merkle-tree", version = "=1.10.0" }
paychains-metrics = { path = "../metrics", version = "=1.10.0" }
paychains-perf = { path = "../perf", version = "=1.10.0" }
paychains-rayon-threadlimit = { path = "../rayon-threadlimit", version = "=1.10.0" }
paychains-rpc = { path = "../rpc", version = "=1.10.0" }
paychains-runtime = { path = "../runtime", version = "=1.10.0" }
paychains-sdk = { path = "../sdk", version = "=1.10.0" }
paychains-streamer = { path = "../streamer", version = "=1.10.0" }
paychains-test-validator = { path = "../test-validator", version = "=1.10.0" }
paychains-transaction-status = { path = "../transaction-status", version = "=1.10.0" }
paychains-version = { path = "../version", version = "=1.10.0" }
systemstat = "0.1.10"

[dev-dependencies]
paychains-logger = { path = "../logger", version = "=1.10.0" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
