[package]
name = "paychains-core"
description = "Blockchain, Rebuilt for Scale"
version = "1.10.0"
homepage = "https://paychains.com/"
documentation = "https://docs.rs/paychains-core"
readme = "../README.md"
repository = "https://github.com/paychains-labs/paychains"
authors = ["PayChains Maintainers <maintainers@paychains.foundation>"]
license = "Apache-2.0"
edition = "2021"

[badges]
codecov = { repository = "paychains-labs/paychains", branch = "master", service = "github" }

[dependencies]
ahash = "0.7.6"
base64 = "0.12.3"
bincode = "1.3.3"
bs58 = "0.4.0"
chrono = { version = "0.4.11", features = ["serde"] }
crossbeam-channel = "0.5"
dashmap = { version = "5.0.0", features = ["rayon", "raw-api"] }
etcd-client = { version = "0.8.3", features = ["tls"]}
fs_extra = "1.2.0"
histogram = "0.6.9"
itertools = "0.10.3"
log = "0.4.14"
lru = "0.7.2"
rand = "0.7.0"
rand_chacha = "0.2.2"
rayon = "1.5.1"
retain_mut = "0.1.5"
serde = "1.0.133"
serde_derive = "1.0.103"
paychains-accountsdb-plugin-manager = { path = "../accountsdb-plugin-manager", version = "=1.10.0" }
paychains-client = { path = "../client", version = "=1.10.0" }
paychains-entry = { path = "../entry", version = "=1.10.0" }
paychains-gossip = { path = "../gossip", version = "=1.10.0" }
paychains-ledger = { path = "../ledger", version = "=1.10.0" }
paychains-measure = { path = "../measure", version = "=1.10.0" }
paychains-metrics = { path = "../metrics", version = "=1.10.0" }
paychains-net-utils = { path = "../net-utils", version = "=1.10.0" }
paychains-perf = { path = "../perf", version = "=1.10.0" }
paychains-poh = { path = "../poh", version = "=1.10.0" }
paychains-program-runtime = { path = "../program-runtime", version = "=1.10.0" }
paychains-rpc = { path = "../rpc", version = "=1.10.0" }
paychains-replica-lib = { path = "../replica-lib", version = "=1.10.0" }
paychains-runtime = { path = "../runtime", version = "=1.10.0" }
paychains-sdk = { path = "../sdk", version = "=1.10.0" }
paychains-frozen-abi = { path = "../frozen-abi", version = "=1.10.0" }
paychains-frozen-abi-macro = { path = "../frozen-abi/macro", version = "=1.10.0" }
paychains-send-transaction-service = { path = "../send-transaction-service", version = "=1.10.0" }
paychains-streamer = { path = "../streamer", version = "=1.10.0" }
paychains-transaction-status = { path = "../transaction-status", version = "=1.10.0" }
paychains-vote-program = { path = "../programs/vote", version = "=1.10.0" }
tempfile = "3.3.0"
thiserror = "1.0"
paychains-rayon-threadlimit = { path = "../rayon-threadlimit", version = "=1.10.0" }
sys-info = "0.9.1"
tokio = { version = "1", features = ["full"] }
trees = "0.4.2"

[dev-dependencies]
jsonrpc-core = "18.0.0"
jsonrpc-core-client = { version = "18.0.0", features = ["ipc", "ws"] }
jsonrpc-derive = "18.0.0"
jsonrpc-pubsub = "18.0.0"
matches = "0.1.9"
raptorq = "1.6.4"
reqwest = { version = "0.11.6", default-features = false, features = ["blocking", "rustls-tls", "json"] }
serde_json = "1.0.74"
serial_test = "0.5.1"
paychains-logger = { path = "../logger", version = "=1.10.0" }
paychains-program-runtime = { path = "../program-runtime", version = "=1.10.0" }
paychains-stake-program = { path = "../programs/stake", version = "=1.10.0" }
paychains-version = { path = "../version", version = "=1.10.0" }
static_assertions = "1.1.0"
systemstat = "0.1.10"

[build-dependencies]
rustc_version = "0.4"

[[bench]]
name = "banking_stage"

[[bench]]
name = "cluster_info"

[[bench]]
name = "gen_keys"

[[bench]]
name = "sigverify_stage"

[[bench]]
name = "retransmit_stage"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
