[package]
authors = ["PayChains Maintainers <maintainers@paychains.foundation>"]
edition = "2021"
name = "paychains-dos"
version = "1.10.0"
repository = "https://github.com/paychains-labs/paychains"
license = "Apache-2.0"
homepage = "https://paychains.com/"
publish = false

[dependencies]
bincode = "1.3.3"
clap = "2.33.1"
log = "0.4.14"
rand = "0.7.0"
paychains-core = { path = "../core", version = "=1.10.0" }
paychains-gossip = { path = "../gossip", version = "=1.10.0" }
paychains-logger = { path = "../logger", version = "=1.10.0" }
paychains-net-utils = { path = "../net-utils", version = "=1.10.0" }
paychains-perf = { path = "../perf", version = "=1.10.0" }
paychains-sdk = { path = "../sdk", version = "=1.10.0" }
paychains-streamer = { path = "../streamer", version = "=1.10.0" }
paychains-version = { path = "../version", version = "=1.10.0" }
paychains-client = { path = "../client", version = "=1.10.0" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
