[package]
name = "paychains-download-utils"
version = "1.10.0"
description = "PayChains Download Utils"
authors = ["PayChains Maintainers <maintainers@paychains.foundation>"]
repository = "https://github.com/paychains-labs/paychains"
license = "Apache-2.0"
homepage = "https://paychains.com/"
documentation = "https://docs.rs/paychains-download-utils"
edition = "2021"

[dependencies]
console = "0.15.0"
indicatif = "0.16.2"
log = "0.4.14"
reqwest = { version = "0.11.6", default-features = false, features = ["blocking", "rustls-tls", "json"] }
paychains-sdk = { path = "../sdk", version = "=1.10.0" }
paychains-runtime = { path = "../runtime", version = "=1.10.0" }

[lib]
crate-type = ["lib"]
name = "paychains_download_utils"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
