[package]
name = "paychains-entry"
version = "1.10.0"
description = "PayChains Entry"
authors = ["PayChains Maintainers <maintainers@paychains.foundation>"]
repository = "https://github.com/paychains-labs/paychains"
license = "Apache-2.0"
homepage = "https://paychains.com/"
documentation = "https://docs.rs/paychains-poh"
edition = "2021"

[dependencies]
crossbeam-channel = "0.5"
dlopen = "0.1.8"
dlopen_derive = "0.1.4"
log = "0.4.11"
rand = "0.7.0"
rayon = "1.5.1"
serde = "1.0.133"
paychains-measure = { path = "../measure", version = "=1.10.0" }
paychains-merkle-tree = { path = "../merkle-tree", version = "=1.10.0" }
paychains-metrics = { path = "../metrics", version = "=1.10.0" }
paychains-perf = { path = "../perf", version = "=1.10.0" }
paychains-rayon-threadlimit = { path = "../rayon-threadlimit", version = "=1.10.0" }
paychains-sdk = { path = "../sdk", version = "=1.10.0" }
bincode = "1.3.3"

[dev-dependencies]
matches = "0.1.9"
paychains-logger = { path = "../logger", version = "=1.10.0" }

[lib]
crate-type = ["lib"]
name = "paychains_entry"

[[bench]]
name = "entry_sigverify"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
