[package]
name = "paychains-faucet"
version = "1.10.0"
description = "PayChains Faucet"
authors = ["PayChains Maintainers <maintainers@paychains.foundation>"]
repository = "https://github.com/paychains-labs/paychains"
license = "Apache-2.0"
homepage = "https://paychains.com/"
documentation = "https://docs.rs/paychains-faucet"
edition = "2021"

[dependencies]
bincode = "1.3.3"
byteorder = "1.4.3"
clap = "2.33"
crossbeam-channel = "0.5"
log = "0.4.14"
serde = "1.0.133"
serde_derive = "1.0.103"
paychains-clap-utils = { path = "../clap-utils", version = "=1.10.0" }
paychains-cli-config = { path = "../cli-config", version = "=1.10.0" }
paychains-logger = { path = "../logger", version = "=1.10.0" }
paychains-metrics = { path = "../metrics", version = "=1.10.0" }
paychains-sdk = { path = "../sdk", version = "=1.10.0" }
paychains-version = { path = "../version", version = "=1.10.0" }
spl-memo = { version = "=3.0.1", features = ["no-entrypoint"] }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }

[lib]
crate-type = ["lib"]
name = "paychains_faucet"

[[bin]]
name = "paychains-faucet"
path = "src/bin/faucet.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
