[package]
name = "paychains-frozen-abi"
version = "1.10.0"
description = "PayChains Frozen ABI"
authors = ["PayChains Maintainers <maintainers@paychains.foundation>"]
repository = "https://github.com/paychains-labs/paychains"
homepage = "https://paychains.com/"
documentation = "https://docs.rs/paychains-frozen-abi"
license = "Apache-2.0"
edition = "2021"

[dependencies]
bs58 = "0.4.0"
bv = { version = "0.11.1", features = ["serde"] }
log = "0.4.14"
serde = "1.0.133"
serde_derive = "1.0.103"
sha2 = "0.10.1"
paychains-frozen-abi-macro = { path = "macro", version = "=1.10.0" }
thiserror = "1.0"

[target.'cfg(not(target_arch = "bpf"))'.dependencies]
generic-array = { version = "0.14.5", default-features = false, features = ["serde", "more_lengths"]}
memmap2 = "0.5.2"

[target.'cfg(not(target_arch = "bpf"))'.dev-dependencies]
paychains-logger = { path = "../logger", version = "=1.10.0" }

[build-dependencies]
rustc_version = "0.4"
