[package]
name = "paychains-genesis-utils"
version = "1.10.0"
description = "PayChains Genesis Utils"
authors = ["PayChains Maintainers <maintainers@paychains.foundation>"]
repository = "https://github.com/paychains-labs/paychains"
license = "Apache-2.0"
homepage = "https://paychains.com/"
documentation = "https://docs.rs/paychains-download-utils"
edition = "2021"

[dependencies]
paychains-sdk = { path = "../sdk", version = "=1.10.0" }
paychains-download-utils = { path = "../download-utils", version = "=1.10.0" }
paychains-runtime = { path = "../runtime", version = "=1.10.0" }

[lib]
crate-type = ["lib"]
name = "paychains_genesis_utils"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
