[package]
authors = ["PayChains Maintainers <maintainers@paychains.foundation>"]
edition = "2021"
name = "paychains-genesis"
description = "Blockchain, Rebuilt for Scale"
version = "1.10.0"
repository = "https://github.com/paychains-labs/paychains"
license = "Apache-2.0"
homepage = "https://paychains.com/"
documentation = "https://docs.rs/paychains-genesis"

[dependencies]
base64 = "0.12.3"
clap = "2.33.1"
serde = "1.0.133"
serde_json = "1.0.74"
serde_yaml = "0.8.23"
paychains-clap-utils = { path = "../clap-utils", version = "=1.10.0" }
paychains-cli-config = { path = "../cli-config", version = "=1.10.0" }
paychains-entry = { path = "../entry", version = "=1.10.0" }
paychains-ledger = { path = "../ledger", version = "=1.10.0" }
paychains-logger = { path = "../logger", version = "=1.10.0" }
paychains-runtime = { path = "../runtime", version = "=1.10.0" }
paychains-sdk = { path = "../sdk", version = "=1.10.0" }
paychains-stake-program = { path = "../programs/stake", version = "=1.10.0" }
paychains-version = { path = "../version", version = "=1.10.0" }
paychains-vote-program = { path = "../programs/vote", version = "=1.10.0" }
tempfile = "3.3.0"

[[bin]]
name = "paychains-genesis"
path = "src/main.rs"

[lib]
name = "paychains_genesis"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
