[package]
authors = ["PayChains Maintainers <maintainers@paychains.foundation>"]
edition = "2021"
name = "paychains-gossip"
description = "Blockchain, Rebuilt for Scale"
version = "1.10.0"
repository = "https://github.com/paychains-labs/paychains"
license = "Apache-2.0"
homepage = "https://paychains.com/"
documentation = "https://docs.rs/paychains-gossip"

[dependencies]
bincode = "1.3.3"
bv = { version = "0.11.1", features = ["serde"] }
clap = "2.33.1"
crossbeam-channel = "0.5"
flate2 = "1.0"
indexmap = { version = "1.8", features = ["rayon"] }
itertools = "0.10.3"
log = "0.4.14"
lru = "0.7.2"
matches = "0.1.9"
num-traits = "0.2"
rand = "0.7.0"
rand_chacha = "0.2.2"
rayon = "1.5.1"
serde = "1.0.133"
serde_bytes = "0.11"
serde_derive = "1.0.103"
paychains-clap-utils = { path = "../clap-utils", version = "=1.10.0" }
paychains-client = { path = "../client", version = "=1.10.0" }
paychains-entry = { path = "../entry", version = "=1.10.0" }
paychains-frozen-abi = { path = "../frozen-abi", version = "=1.10.0" }
paychains-frozen-abi-macro = { path = "../frozen-abi/macro", version = "=1.10.0" }
paychains-ledger = { path = "../ledger", version = "=1.10.0" }
paychains-logger = { path = "../logger", version = "=1.10.0" }
paychains-measure = { path = "../measure", version = "=1.10.0" }
paychains-metrics = { path = "../metrics", version = "=1.10.0" }
paychains-net-utils = { path = "../net-utils", version = "=1.10.0" }
paychains-perf = { path = "../perf", version = "=1.10.0" }
paychains-rayon-threadlimit = { path = "../rayon-threadlimit", version = "=1.10.0" }
paychains-runtime = { path = "../runtime", version = "=1.10.0" }
paychains-streamer = { path = "../streamer", version = "=1.10.0" }
paychains-sdk = { path = "../sdk", version = "=1.10.0" }
paychains-version = { path = "../version", version = "=1.10.0" }
paychains-vote-program = { path = "../programs/vote", version = "=1.10.0" }
thiserror = "1.0"

[dev-dependencies]
num_cpus = "1.13.1"
serial_test = "0.5.1"

[build-dependencies]
rustc_version = "0.4"

[[bench]]
name = "crds"

[[bench]]
name = "crds_gossip_pull"

[[bench]]
name = "crds_shards"

[[bin]]
name = "paychains-gossip"
path = "src/main.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
