[package]
name = "paychains-keygen"
version = "1.10.0"
description = "PayChains key generation utility"
authors = ["PayChains Maintainers <maintainers@paychains.foundation>"]
repository = "https://github.com/paychains-labs/paychains"
license = "Apache-2.0"
homepage = "https://paychains.com/"
documentation = "https://docs.rs/paychains-keygen"
edition = "2021"

[dependencies]
bs58 = "0.4.0"
clap = "2.33"
dirs-next = "2.0.0"
num_cpus = "1.13.1"
paychains-clap-utils = { path = "../clap-utils", version = "=1.10.0" }
paychains-cli-config = { path = "../cli-config", version = "=1.10.0" }
paychains-remote-wallet = { path = "../remote-wallet", version = "=1.10.0" }
paychains-sdk = { path = "../sdk", version = "=1.10.0" }
paychains-version = { path = "../version", version = "=1.10.0" }
tiny-bip39 = "0.8.2"

[[bin]]
name = "paychains-keygen"
path = "src/keygen.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
