[package]
authors = ["PayChains Maintainers <maintainers@paychains.foundation>"]
edition = "2021"
name = "paychains-local-cluster"
description = "Blockchain, Rebuilt for Scale"
version = "1.10.0"
repository = "https://github.com/paychains-labs/paychains"
license = "Apache-2.0"
homepage = "https://paychains.com/"
documentation = "https://docs.rs/paychains-local-cluster"

[dependencies]
crossbeam-channel = "0.5"
itertools = "0.10.3"
fs_extra = "1.2.0"
log = "0.4.14"
rand = "0.7.0"
rayon = "1.5.1"
paychains-config-program = { path = "../programs/config", version = "=1.10.0" }
paychains-core = { path = "../core", version = "=1.10.0" }
paychains-client = { path = "../client", version = "=1.10.0" }
paychains-entry = { path = "../entry", version = "=1.10.0" }
paychains-gossip = { path = "../gossip", version = "=1.10.0" }
paychains-ledger = { path = "../ledger", version = "=1.10.0" }
paychains-runtime = { path = "../runtime", version = "=1.10.0" }
paychains-sdk = { path = "../sdk", version = "=1.10.0" }
paychains-stake-program = { path = "../programs/stake", version = "=1.10.0" }
paychains-streamer = { path = "../streamer", version = "=1.10.0" }
paychains-vote-program = { path = "../programs/vote", version = "=1.10.0" }
tempfile = "3.3.0"

[dev-dependencies]
assert_matches = "1.5.0"
gag = "1.0.0"
serial_test = "0.5.1"
paychains-download-utils = { path = "../download-utils", version = "=1.10.0" }
paychains-logger = { path = "../logger", version = "=1.10.0" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
