[package]
name = "paychains-logger"
version = "1.10.0"
description = "PayChains Logger"
authors = ["PayChains Maintainers <maintainers@paychains.foundation>"]
repository = "https://github.com/paychains-labs/paychains"
license = "Apache-2.0"
homepage = "https://paychains.com/"
documentation = "https://docs.rs/paychains-logger"
edition = "2021"

[dependencies]
env_logger = "0.9.0"
lazy_static = "1.4.0"
log = "0.4.14"

[lib]
name = "paychains_logger"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
