[package]
name = "paychains-measure"
description = "Blockchain, Rebuilt for Scale"
version = "1.10.0"
homepage = "https://paychains.com/"
documentation = "https://docs.rs/paychains-measure"
readme = "../README.md"
repository = "https://github.com/paychains-labs/paychains"
authors = ["PayChains Maintainers <maintainers@paychains.foundation>"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
log = "0.4.14"
paychains-sdk = { path = "../sdk", version = "=1.10.0" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
