[package]
name = "paychains-merkle-tree"
version = "1.10.0"
description = "PayChains Merkle Tree"
authors = ["PayChains Maintainers <maintainers@paychains.foundation>"]
repository = "https://github.com/paychains-labs/paychains"
license = "Apache-2.0"
homepage = "https://paychains.com/"
documentation = "https://docs.rs/paychains-merkle-tree"
edition = "2021"

[dependencies]
paychains-program = { path = "../sdk/program", version = "=1.10.0" }
fast-math = "0.1"

# This can go once the BPF toolchain target Rust 1.42.0+
[target.bpfel-unknown-unknown.dependencies]
matches = "0.1.9"

[dev-dependencies]
hex = "0.4.3"

[lib]
crate-type = ["lib"]
name = "paychains_merkle_tree"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
